--- a/client/src/components/molecules/DiceContainer/DiceContainer.css
+++ b/client/src/components/molecules/DiceContainer/DiceContainer.css
@@ -1,6 +1,6 @@
-.App {
+.dice-container {
+    /* margin: 0 50px 0 50px; */
     display: flex;
     justify-content: center;
-    align-items: center;
     width: 100%;
 }
