Add some onclick functionality

--- a/client/src/components/atoms/AnnouncerMessage/AnnouncerMessage.css
+++ b/client/src/components/atoms/AnnouncerMessage/AnnouncerMessage.css
@@ -1,5 +1,5 @@
 .announcer-message {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
-    margin: 0;
+    margin: 10px 0 0 0;
 }
