--- a/client/src/components/pages/GameContainer/GameContainer.css
+++ b/client/src/components/pages/GameContainer/GameContainer.css
@@ -8,3 +8,9 @@
     border: 10px solid black;
     border-radius: 10px;
 }
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
