--- a/client/src/components/molecules/ScoreBoardTreasures/ScoreBoardTreasures.css
+++ b/client/src/components/molecules/ScoreBoardTreasures/ScoreBoardTreasures.css
@@ -1,4 +1,15 @@
 .score-board-treasures {
     width: 500px;
     height: 50px;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.individual-treasure-container {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px 0 0 5px;
 }
