--- a/client/src/components/molecules/TwoChoicesContainer/TwoChoicesContainer.css
+++ b/client/src/components/molecules/TwoChoicesContainer/TwoChoicesContainer.css
@@ -1,6 +1,5 @@
-.announcer-button-container {
+.two-choices-container {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 330px;
 }
