--- a/client/src/components/molecules/EscapeButton/EscapeButton.css
+++ b/client/src/components/molecules/EscapeButton/EscapeButton.css
@@ -1,7 +1,19 @@
 .escape-button-text {
     position: absolute;
-    top: -15px;
-    left: 12px;
+    top: 1px;
+    left: 9.5px;
     cursor: default;
     color: white;
+}
+
+/* Overriding the user-agent-stylesheet imposed by mac-chrome browsers*/
+h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    unicode-bidi: isolate;
 }
