--- a/client/src/components/atoms/PlayerToken/PlayerToken.css
+++ b/client/src/components/atoms/PlayerToken/PlayerToken.css
@@ -1,3 +1,6 @@
 .player-token {
     position: absolute;
+    transition-property: top, left, bottom, right;
+    transition-duration: 700ms;
+    transition-timing-function: ease-in-out;
 }
