Rename ActionType to better represent action, attempt to add a transition to tile tokens - Not successfully.

--- a/client/src/components/atoms/Tile/Tile.css
+++ b/client/src/components/atoms/Tile/Tile.css
@@ -2,4 +2,7 @@
     position: absolute;
     width: 55px;
     height: 55px;
+    /* transition-property: all;
+    transition-duration: 2000s;
+    transition-timing-function: ease-in-out; */
 }
