--- a/client/src/components/atoms/TealOverlay/TealOverlay.css
+++ b/client/src/components/atoms/TealOverlay/TealOverlay.css
@@ -1,7 +1,31 @@
-.teal-overlay {
+.teal-overlay-visible {
+    top: 0px;
     width: 100%;
     height: 100%;
     position: absolute;
     background-color: #2ad2c5;
     opacity: 60%;
+    transition-duration: 1s;
+    /* z-index: 1; */
+    animation: whoGoesFirstVisibility 4.5s;
+}
+
+@keyframes whoGoesFirstVisibility {
+    0% {top: -730px; opacity: 0%}
+    5% {top: 0px; opacity: 0%}
+    15% {top: 0px; opacity: 60%}
+    85% {top: 0px; opacity: 60%}
+    95% {top: 0px; opacity: 0%}
+    100% {top: -730px; opacity: 0%}
+}
+
+.teal-overlay-invisible {
+    top: -730px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #2ad2c5;
+    opacity: 0%;
+    transition-duration: 1s;
+    /* z-index: -1; */
 }
