--- a/client/src/components/organisms/NamePlayersContainer/NamePlayersContainer.css
+++ b/client/src/components/organisms/NamePlayersContainer/NamePlayersContainer.css
@@ -1,4 +1,24 @@
-.name-players-container {
+/* .name-players-container {
+    position: absolute;
+    top: 170px;
+    left: 350px;
+    width: 550px;
+    height: 370px;
+    background-color: #004489;
+    border-radius: 10px;
+} */
+
+.name-players-container-invisible {
+    position: absolute;
+    top: -730px;
+    left: 350px;
+    width: 550px;
+    height: 370px;
+    background-color: #004489;
+    border-radius: 10px;
+}
+
+.name-players-container-visible {
     position: absolute;
     top: 170px;
     left: 350px;
