--- a/client/src/components/atoms/TealOverlay/TealOverlay.css
+++ b/client/src/components/atoms/TealOverlay/TealOverlay.css
@@ -1,5 +1,14 @@
 /* The code below is used for the teal overlay present with the namePlayersContainer at the start of the game. */
 
+.teal-overlay-name-players-container-on-load {
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #2ad2c5;
+    opacity: 0%;
+}
+
 .teal-overlay-name-players-container-visible {
     top: 0px;
     width: 100%;
