Replace code from WhoGoesFirst with code from WhoGoesFirstTesting. Replace all code that utilised WhoGoesFirstTesting and replace it with WhoGoesFirst. Delete folder containing WhoGoesFirstTesting files.

--- a/client/src/components/molecules/WhoGoesFirst/WhoGoesFirst.css
+++ b/client/src/components/molecules/WhoGoesFirst/WhoGoesFirst.css
@@ -1,6 +1,5 @@
-.who-goes-first {
+.who-goes-first-visible {
     position: absolute;
-    top: 170px;
     left: 350px;
     width: 550px;
     height: 370px;
@@ -9,6 +8,31 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    animation: dropDownAndShow 4.5s; 
+}
+
+@keyframes dropDownAndShow {
+    0% {top: -730px; opacity: 0%}
+    5% {top: 170px; opacity: 0%}
+    15% {top: 170px; opacity: 100%}
+    85% {top: 170px; opacity: 100%}
+    95% {top: 170px; opacity: 0%}
+    100% {top: -730px; opacity: 0%}
+}
+
+
+.who-goes-first-invisible {
+    position: absolute;
+    top: -730px;
+    left: 350px;
+    width: 550px;
+    height: 370px;
+    background-color: #004489;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    opacity: 0%;
 }
 
 .player-tokens-container {
