--- a/client/src/components/atoms/TealOverlay/TealOverlay.css
+++ b/client/src/components/atoms/TealOverlay/TealOverlay.css
@@ -1,5 +1,4 @@
 /* The code below is used for the teal overlay present with the namePlayersContainer at the start of the game. */
-
 .teal-overlay-name-players-container-on-load {
     top: 0px;
     width: 100%;
@@ -8,7 +7,6 @@
     background-color: #2ad2c5;
     opacity: 0%;
 }
-
 .teal-overlay-name-players-container-visible {
     top: 0px;
     width: 100%;
@@ -18,13 +16,11 @@
     opacity: 60%;
     animation: tealOverlayNamePlayersContainerVisibility 1s;
 }
-
 @keyframes tealOverlayNamePlayersContainerVisibility {
     0% {top: 0px; opacity: 0%}
     40% {top: 0px; opacity: 60%}
     100% {top: 0px; opacity: 60%}
 }
-
 .teal-overlay-name-players-container-invisible {
     top: -730px;
     width: 100%;
@@ -34,7 +30,6 @@
     opacity: 0%;
     animation: tealOverlayNamePlayersContainerInvisibility 1s;
 }
-
 @keyframes tealOverlayNamePlayersContainerInvisibility {
     0% {top: 0px; opacity: 60%}
     40% {top: 0px; opacity: 0%}
@@ -43,7 +38,6 @@
 
 /* The code below is used for the teal overlay that appears at the start of the game when shuffling and finding out who
 will go first. */
-
 .teal-overlay-who-goes-first-visible {
     top: 0px;
     width: 100%;
@@ -53,7 +47,6 @@ will go first. */
     opacity: 60%;
     animation: whoGoesFirstVisibility 4.5s;
 }
-
 @keyframes whoGoesFirstVisibility {
     0% {top: -730px; opacity: 0%}
     5% {top: 0px; opacity: 0%}
@@ -62,7 +55,6 @@ will go first. */
     95% {top: 0px; opacity: 0%}
     100% {top: -730px; opacity: 0%}
 }
-
 .teal-overlay-who-goes-first-invisible {
     top: -730px;
     width: 100%;
@@ -70,4 +62,30 @@ will go first. */
     position: absolute;
     background-color: #2ad2c5;
     opacity: 0%;
+}
+
+/* The code below is used for the teal overlay that appears at the end of the game, when emphasising who won the game. */
+.teal-overlay-end-game-invisible {
+    top: -730px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #2ad2c5;
+    opacity: 0%;
+    transition-duration: 2s;
+}
+.teal-overlay-end-game-visible {
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #2ad2c5;
+    opacity: 60%;
+    transition-duration: 2s;
+    animation: whoWonTheGameVisibility 4.5s;
+}
+@keyframes whoWonTheGameVisibility {
+    0% {top: -730px; opacity: 0%}
+    5% {top: 0px; opacity: 0%}
+    100% {top: 0px; opacity: 60%}
 }
