--- a/client/src/components/pages/HomeScreen/HomeScreen.css
+++ b/client/src/components/pages/HomeScreen/HomeScreen.css
@@ -9,10 +9,12 @@
     background-color: #003a74;
     border: 10px solid black;
     border-radius: 10px;
+    user-select: none;
 }
 
 .text-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    user-select: none;
 }
